SONAR-18850 made org.sonar.server.component.ws.ShowAction not dependent on mainBranchProjectUuid